fixed big head so its not cut off

--- a/css/style.css
+++ b/css/style.css
@@ -94,6 +94,7 @@ body{
 }
 
 .first_big_image{
+	margin-top:40px;
 	padding:20px;
 	width:100%;
 }
